1st commit html

--- a/HTML/container.html
+++ b/HTML/container.html
@@ -10,23 +10,33 @@
         <header>
             <h1>Container</h1>
             <nav>
+                <hr>
                 <a href="index.html">Home</a>
+                <hr>
             </nav>
         </header>
         <main>
-            <section>
-                <h2>Esportes</h2>
-                <article>
-                    <h3>Hoje: Real Madrid X Borussia Dortmund</h3>
-                </article>
-            </section>
-            <section>
-                <h2>Economia</h2>
-                <article>
-                    <h3>bolsa em alta!!</h3>
-                </article>
-            </section>
-            
+            <div>
+                <section>
+                    <h2>Esportes</h2>
+                    <article>
+                        <h3>Hoje: Real Madrid X Borussia Dortmund</h3>
+                    </article>
+                </section>
+                <section>
+                    <h2>Economia</h2>
+                    <article>
+                        <h3>bolsa em alta!!</h3>
+                    </article>
+                </section>
+            </div>
         </main>
+        <aside>
+            Conteúdo 1
+        </aside>
+        <hr />
+        <footer>
+            &copy; 2024 - Todos direitos reservados.
+        </footer>
     </body>
 </html>
