--- a/HTML/form.html
+++ b/HTML/form.html
@@ -55,6 +55,11 @@
                 <input type="radio" name="vaga"/><label>Pleno</label>
                 <input type="radio" name="vaga"/><label>Sênior</label>
                 <input type="radio" name="vaga"/><label>Lendário</label>
+                <br/><br/>
+                <button onclick="window.location.href='https://w3docs.com';">
+                    Click Here
+                </button>
+                <br/><br/>
             </form>
         </main>
         <footer>
