--- a/HTML/midias.html
+++ b/HTML/midias.html
@@ -15,7 +15,11 @@
             </nav>
         </header>
         <main>
-            <img src="./medias/image_m3.jpg" alt="Uma abelha">
+            <img width="480px" src="./medias/image_m3.jpg" alt="Uma abelha"><br/><br/>
+            <audio controls src="./medias/music_m3.mp3"></audio><br/><br/>
+            <video width="480px" controls src="./medias/video_m3.mp4"><br/><br/>
+                
+            </video>
         </main>
         <footer>
             &copy; 2024 - Todos direitos reservados.
