--- a/Portal_noticia/index.html
+++ b/Portal_noticia/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
+    <header>
+        <div class="container">
             <h1>Meu portal de notícias</h1>
             <nav>
                 <ul>
@@ -26,8 +26,8 @@
                     </li>
                 </ul>
             </nav>
-        </header>
-    </div>
+        </div>
+    </header>
     <section id="sport">
         <div class="container">
             <h2>Esportes</h2>
@@ -55,6 +55,21 @@
                         </header>
                     </div>
                     <h3>Noite do Superbowl</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore
+                        architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error?
+                        Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./images/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <div class="creation-date">
+                        <header>
+                            <time>13/07/2022 às 12:35</time>
+                        </header>
+                    </div>
+                    <h3>Notícia sobre a NBA</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore
                         architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error?
